Actuator and Security added

--- a/rentACar/src/main/resources/application.properties
+++ b/rentACar/src/main/resources/application.properties
@@ -5,3 +5,19 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/rentACar
 spring.datasource.username=postgres
 spring.datasource.password=5561
 spring.jpa.properties.javax.persistence.validation.mode = none
+
+#Use wildcard "*" to expose all endpoints
+#Can also expose individual endpoints with a comma-delimited list
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+
+#Exclude individual endpoints with a comma-delimited list
+# management.endpoints.web.exposure.exclude=health, info
+
+
+info.app.name=Rent a Car App
+info.app.description= Rent a car, full the fun bar
+info.app.version=0.0.1
+
+spring.security.user.name=alp
+spring.security.user.password=5561
