--- a/rentACar/src/main/resources/application.properties
+++ b/rentACar/src/main/resources/application.properties
@@ -19,5 +19,5 @@ info.app.name=Rent a Car App
 info.app.description= Rent a car, full the fun bar
 info.app.version=0.0.1
 
-spring.security.user.name=alp
-spring.security.user.password=5561
+#spring.security.user.name=alp
+#spring.security.user.password=5561
