Users infos added in DB

--- a/rentACar/src/main/resources/application.properties
+++ b/rentACar/src/main/resources/application.properties
@@ -21,3 +21,5 @@ info.app.version=0.0.1
 
 #spring.security.user.name=alp
 #spring.security.user.password=5561
+
+logging.level.org.springframework.jdbc.core=TRACE
